style corrections: height, alignment

--- a/app/index.css
+++ b/app/index.css
@@ -9,6 +9,12 @@ html, body {
   color: #ffc107;
 }
 
+@media screen and (max-width: 40em) {
+.gtext-left {
+  text-align: left !important;
+}
+}
+
 .lh-1-5 {
   line-height: 1.5em;
 }
@@ -150,7 +156,7 @@ html, body {
 /************************************************ Rent Park ************************************************/
 
 .rentpark-container {
-  max-height: 30em;
+  max-height: 25em;
   height: 100%;
   background: url('https://static.justpark.com/web/e22c216c94952fe6e02372b9430b8a1c.webp') 50% 50% no-repeat #21303e;
   background-size: cover;
@@ -158,7 +164,7 @@ html, body {
 
 @media screen and (min-width: 40em) {
   .rentpark-container {
-    max-height: 55em;
+    max-height: 40em;
     background: url('https://static.justpark.com/web/e22c216c94952fe6e02372b9430b8a1c.webp') no-repeat #21303e;
     background-size: cover;
   }
@@ -187,7 +193,7 @@ html, body {
 /************************************************ Car Park ************************************************/
 
 .carpark-container {
-  max-height: 30em;
+  max-height: 25em;
   height: 100%;
   background: url('https://static.justpark.com/web/84c75e192fe467e14e15a8e196e6cf5c.webp') 50% 50% no-repeat #21303e;
   background-size: cover;
@@ -214,7 +220,7 @@ html, body {
     background: hsla(0,0%,100%,.08);
   }
   .carpark-container {
-    max-height: 55em;
+    max-height: 40em;
     background: url('https://static.justpark.com/web/84c75e192fe467e14e15a8e196e6cf5c.webp') no-repeat #21303e;
     background-size: cover;
   }
@@ -223,18 +229,23 @@ html, body {
 /************************************************ Easy Parking ************************************************/
 .easy-container {
   height: 100%;
-  max-height: 45em;
+  max-height: 35em;
 }
 
 @media screen and (min-width: 40em) {
   .easy-container {
     height: 100%;
-    max-height: 45em;
+    max-height: 40em;
   }
 
   .easy-slick {
     max-width: 80em;
     margin: 0 auto;
+  }
+  .easy-center {
+    width: 200px;
+    margin: auto;
+    line-height: 2em;
   }
 }
 
@@ -263,7 +274,7 @@ html, body {
 .easypark-title {
   font-size: 40px;
   color: #007aff;
-  line-height: 4em;
+  line-height: 2em;
 }
 
 .easypark-caption {
@@ -299,7 +310,7 @@ html, body {
   }
 
   .review-container {
-    max-height: 70em;
+    max-height: 50em;
     height: 100%;
     background-color: #21303e;
   }
@@ -322,7 +333,7 @@ html, body {
 @media screen and (max-width: 40em) {
   .download-container {
     height: 100%;
-    max-height: 35em;
+    max-height: 30em;
     text-align: center;
     background-color: #20313e;
   }
@@ -356,7 +367,7 @@ html, body {
 @media screen and (min-width: 40em) {
   .download-container {
     height: 100%;
-    max-height: 45em;
+    max-height: 35em;
     background-color: #20313e;
     color: #fff;
   }
